📝 add lexakai documentation script